Showing historic tile templates that are on the map (but no longer available for paiting down) Shift over a pallette tile now hilights all the matching tile templates on the map (will be helpful when tiles are more versioned)

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -36,6 +36,8 @@ pre.dungeon_preview table {
   user-select: none;
 }
 
+#dungeon_editor pre.dungeon_preview table td.hilight,
+#dungeon_editor pre.dungeon_preview table td span.hilight,
 #dungeon_editor pre.dungeon_preview table td:hover,
 #dungeon_editor pre.dungeon_preview table td span[style]:hover {
   background-color:orange !important;
@@ -50,4 +52,9 @@ pre.dungeon_preview table {
 input#tile_template_character {
   width: 3em;
   padding-left: 1.2em;
+}
+
+.tile_pallette_group {
+  height: 100px;
+  overflow-y: scroll;
 }
